add account balance
